--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Information</title>
+    <link rel="stylesheet" href="css/styles.css">
+    
   </head>
   <body>
     <h1>Social Networks</h1>
@@ -30,5 +32,16 @@
     <hr size = "3">
     <a href="index.html"><em>Back to menu...</em></a>
   </body>
+  </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
   </body>
 </html>
