Intoduction to CSS
In this section I add CSS elements to display on web with a new visualize

--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My hobbies</title>
     <link rel="stylesheet" href="css/styles.css">
-    
+
   </head>
   <body>
     <h1>Hobbies</h1>
@@ -12,7 +12,7 @@
       <li>I like to program everythink.</li>
       <li>I like to listen to <em><a href="https://open.spotify.com/playlist/6yd3cPgiqd6EDoc5lqTNRh?si=694d3a36293e4fab">music</a></em>.</li>
       <li>I like to play <em><a href="https://es.wikipedia.org/wiki/God_of_War_(serie)">videogames</a></em>.</li>
-      <li>I like learn about the <em><a href="https://www.nasa.gov">universe</a></em> and most specifically about physics.</li>
+      <li>I like learning about the <em><a href="https://www.nasa.gov">universe</a></em> and most specifically about physics.</li>
       <li>I 💖 cars and 🚀</li>
     </ol>
     <hr>
