--- a/contact.html
+++ b/contact.html
@@ -22,14 +22,16 @@
     <hr size = "3">
 
     <form action="mailto:estonoesparabots@gmail.com" method="post" enctype="text/plain">
-      <label>Your name: </label><input type="text" name="yourName" value=""><br>
-      <label>Your email: </label><input type="email" name="yourEmail" value=""><br>
+      <label>Your name: </label><input type="text" name="yourName" value="" class="tableStyle"><br><br>
+      <label>Your email: </label><input type="email" name="yourEmail" value="" class="tableStyle"><br>
       <label>Your message: </label><br>
-      <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+      <textarea name="yourMessage" rows="10" cols="30" class="tableStyle"></textarea><br>
       <input type="submit" name="">
     </form>
 
     <hr size = "3">
-    <a href="index.html"><em>Back to menu...</em></a>
+    <a href="index.html"><em>
+      <button type="button" name="BackToMenuButton" class="button-primaries">Back To Menu</button>
+    </em></a>
   </body>
 </html>
