--- a/hobbies.html
+++ b/hobbies.html
@@ -17,6 +17,8 @@
     </ol>
     <hr>
     <br>
-    <a href="index.html"><em>Back to menu...</em></a>
+    <a href="index.html"><em>
+      <button type="button" name="BackToMenuButton" class="button-primaries">Back To Menu</button>
+    </em></a>
   </body>
 </html>
