--- a/index.html
+++ b/index.html
@@ -1,68 +1,127 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Angela's Personal Site</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
+<html lang="en" dir="ltr">
 
-  <body style="background-color: white">
-    <table cellspacing="20">
+<head>
+  <meta charset="utf-8">
+  <title class="centerText colorTitles">Mateo's Personal Website</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+  <script type="text/javascript">
+
+  </script>
+</head>
+
+<body>
+  <!-- <img
+  src="https://scontent.feoh3-1.fna.fbcdn.net/v/t39.30808-6/279900330_1745697648933884_5277287746002353277_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHSLp2RrwS1n8mqIS5EIeKz8aINaJOCRmXxog1ok4JGZRWwS1wyQqWi04xxcYYcqw2VdVpjgko42J0gxj5y1bUg&_nc_ohc=Dd4qmlG-zxUAX-C2dL7&_nc_ht=scontent.feoh3-1.fna&oh=00_AT9DW4VwxUW42hvX8yDOxWXTtoo3oMmVsLSnQHNYc9PNeA&oe=62D38714"
+  alt="Mateo's profile picture"
+  > -->
+
+  <table cellspacing = "30">
+    <tr>
+      <td>
+        <img src="Images\MyPhoto-modified.png" alt="Mateo's profile picture" width="300" height="300">
+      </td>
+      <td>
+        <h1 class="centerText colorTitles">Mateo Jaramillo Restrepo</h1>
+        <p><em>Game developer and <strong>programmer</strong>.</em></p>
+        <p>I am from <em><strong>Colombia</strong></em>🌎. I am working on <em><strong>Selecu</strong></em>. I am a programmer and <em>Unity Junior Developer</em> with <stron>6 months</stron> of experience creating <em>videogames</em>.</p>
+      </td>
+    </tr>
+  </table>
+
+  <hr>
+  <h2 class="centerText colorTitles">Education</h2>
+  <ul>
+    <li><strong>School:</strong> <em>I.E. INEM JOSÉ FELIX DE RESTREPO.</em> (Medellín)</li>
+    <li><strong>Tecnology:</strong> <em>SENA.</em> (Medellín)</li>
+  </ul>
+
+  <hr>
+
+  <h3 class="centerText colorTitles">Work Experience</h3>
+  <table>
+    <thead>
       <tr>
-        <td><img src="images/MyPhoto-modified.png" alt="angela profile picture" width="100" height="100"></td>
-        <td><h1>Angela Yu</h1>
-        <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
-        <p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
+        <th>Date<th>
+        <th>Work<th>
       </tr>
-    </table>
-    <hr>
-    <h3>Books and Teaching</h3>
-    <ul>
-      <li>The Complete iOS App Development Bootcamp</li>
-      <li>The Complete Web Development Bootcamp</li>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-      <thead>
-        <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2009-2010</td>
-          <td>Researcher at The Institute of Cognitive Neurosciences</td>
-        </tr>
-        <tr>
-          <td>2010-2013</td>
-          <td>Lead Developer at Tempo App</td>
-        </tr>
-        <tr>
-          <td>2013-2015</td>
-          <td>Clinical Doctor at the National Health Service</td>
-        </tr>
-      </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
+    </thead>
+    <tbody>
       <tr>
-        <td>iOS Development</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
+        <td>2022 - actualy</td>
+        <td>Game Developer (Selecu)</td>
       </tr>
       <tr>
-        <td>Web Development</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
+        <td>2022</td>
+        <td>Game Desing (Selecu)</td>
       </tr>
+    </tbody>
+  </table>
+
+  <hr>
+
+  <h3 class="centerText colorTitles">Skills</h3>
+  <table class="tableStyle">
+    <tbody>
       <tr>
-        <td>Photography</td>
-        <td>⭐️⭐️</td>
+
+        <td>
+          <table cellspacing = "10">
+            <tbody>
+              <tr>
+                <td>Programming</td>
+                <td>🍕🍕🍕🍕</td>
+              </tr>
+              <tr>
+                <td>Level Desing (2D)</td>
+                <td>🍕🍕🍕</td>
+              </tr>
+              <tr>
+                <td>UI and Interface (Unity)</td>
+                <td>🍕🍕🍕🍕</td>
+              </tr>
+            </tbody>
+          </table cellspacing = "10">
+        </td>
+
+        <td>
+          <table>
+            <tbody>
+              <tr>
+                <td>Unity (2D and 3D)</td>
+                <td>🍕🍕🍕</td>
+              </tr>
+              <tr>
+                <td>HTML - CSS - JS</td>
+                <td>🍕</td>
+              </tr>
+              <tr>
+                <td>English</td>
+                <td>🍕🍕🍕</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
       </tr>
-    </table>
-    <hr>
-    <a href="hobbies.html">My Hobbies</a>
-    <a href="contact.html">Contact Me</a>
-  </body>
+    </tbody>
+  </table>
+  <hr>
+  <br>
+  <table>
+    <tr>
+      <td>
+        <a href="hobbies.html">
+          <button type="button" name="MyHobbiesButton" class="button-primaries">My Hobbies</button>
+        </a>
+      </td>
+      <br>
+      <td>
+        <a href="contact.html">
+          <button type="button" name="ContactMeButton" class="button-primaries">Contact Me</button>
+        </a>
+      </td>
+    </tr>
+  </table>
+  <br>
 </html>
